--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Review DOM manipulations</title>
 </head>
 <body>
+
+    <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste possimus, atque aut numquam ad tempore!</p>
     
 
 
