--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste possimus, atque aut numquam ad tempore!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste possimus, atque aut numquam ad tempore!</p>
     
 
 
