added second paragraph

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste possimus, atque aut numquam ad tempore!</p>
+
+    <p id="para-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam voluptatem nemo id numquam omnis adipisci.</p>
     
 
 
-    <script src=js/review-dom-manipulation-1.js></script>
+    <script src=js/review-dom-manipulation-2.js></script>
 </body>
 </html>
