--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
     
-    <a href="">This is an anchor tag</a>
+    <a href="" target>This is an anchor tag</a>
     <a href="">this is another anchor tag</a>
 
     <p id="para-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate placeat maxime quasi a eos maiores.</p>
 
-    <button class="button">click me to explode</button>
+    <button class="button">submit</button>
 
-    <script src="js/script.js"></script>
+    <button class="button2">Cancel</button>
+
+    <script src="js/dom-event-listener.js"></script>
+    
 </body>
 </html>
