--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <button class="button2">Cancel</button>
 
-    <script src="js/dom-event-listener.js"></script>
+    <script src="js/conditions.js"></script>
     
 </body>
 </html>
